P3/ejudge_contests/03/var/archive/xmlreports/0/0/0/000023
Content-type: text/xml

<?xml version="1.0" encoding="utf-8"?>
<testing-report run-id="23" judge-id="12" status="CE" scoring="ACM" run-tests="0" contest-id="303" compile-error="yes" >
  <uuid>741a3a6f-628e-46d1-8b27-2234a095838b</uuid>
  <compiler_output>000023.cpp:4:19: error: too many decimal points in number
 m,m2,p,g,v:array[-10..20000] of int64;
                   ^~~~~~~~~
000023.cpp:6:14: warning: character constant too long for its type
 assign(input,'input.txt'); reset(input);
              ^~~~~~~~~~~
000023.cpp:7:15: warning: character constant too long for its type
 assign(output,'output.txt'); rewrite(output);
               ^~~~~~~~~~~~
000023.cpp:47:10: warning: character constant too long for its type
    write('This is impossible.')
          ^~~~~~~~~~~~~~~~~~~~~
000023.cpp:1:1: error: 'var' does not name a type
 var
 ^~~
000023.cpp:3:1: error: 'i' does not name a type
 i,j:longint;
 ^
000023.cpp:4:1: error: 'm' does not name a type
 m,m2,p,g,v:array[-10..20000] of int64;
 ^
000023.cpp:5:4: error: 'Begin' does not name a type
    Begin
    ^~~~~
000023.cpp:6:33: error: expected constructor, destructor, or type conversion before '(' token
 assign(input,'input.txt'); reset(input);
                                 ^
000023.cpp:7:7: error: expected constructor, destructor, or type conversion before '(' token
 assign(output,'output.txt'); rewrite(output);
       ^
000023.cpp:7:37: error: expected constructor, destructor, or type conversion before '(' token
 assign(output,'output.txt'); rewrite(output);
                                     ^
000023.cpp:8:7: error: expected constructor, destructor, or type conversion before '(' token
 readln(a,b);
       ^
000023.cpp:9:1: error: 'k' does not name a type
 k:=b-a;
 ^
000023.cpp:10:7: error: expected constructor, destructor, or type conversion before '(' token
 readln(n);
       ^
000023.cpp:11:1: error: expected unqualified-id before 'for'
 for i:=1 to k do begin
 ^~~
000023.cpp:13:4: error: 'm2' does not name a type
    m2[i]:=0; end;
    ^~
000023.cpp:13:14: error: 'end' does not name a type
    m2[i]:=0; end;
              ^~~
000023.cpp:14:1: error: expected unqualified-id before 'for'
 for i:=1 to n do begin
 ^~~
000023.cpp:16:5: error: expected unqualified-id before 'if'
     if (m[g[i]]&gt;p[i]) or (m[g[i]]=0) then
     ^~
000023.cpp:18:5: error: expected unqualified-id before 'if'
     if (m2[g[i]]&lt;p[i]) or (m2[g[i]]=0) then
     ^~
000023.cpp:19:21: error: 'end' does not name a type
     m2[g[i]]:=p[i]; end;
                     ^~~
000023.cpp:20:1: error: 'min' does not name a type
 min:=50000000000;
 ^~~
000023.cpp:21:1: error: expected unqualified-id before 'for'
 for i:=1 to k do begin
 ^~~
000023.cpp:26:9: error: 'end' does not name a type
         end;
         ^~~
000023.cpp:27:5: error: expected unqualified-id before 'if'
     if min&lt;50000000000 then
     ^~
000023.cpp:29:5: error: 'min' does not name a type
     min:=50000000000;
     ^~~
000023.cpp:30:5: error: 'end' does not name a type
     end;
     ^~~
000023.cpp:31:1: error: 'max' does not name a type
 max:=0;
 ^~~
000023.cpp:32:1: error: expected unqualified-id before 'for'
 for i:=1 to k do begin
 ^~~
000023.cpp:37:9: error: 'end' does not name a type
         end;
         ^~~
000023.cpp:38:5: error: expected unqualified-id before 'if'
     if max&gt;0 then
     ^~
000023.cpp:40:5: error: 'max' does not name a type
     max:=0;
     ^~~
000023.cpp:41:5: error: 'end' does not name a type
     end;
     ^~~
000023.cpp:42:1: error: expected unqualified-id before 'if'
 if (m[k]=50000000000) and (m2[k]&lt;&gt;0) then
 ^~
000023.cpp:44:1: error: expected unqualified-id before 'if'
 if (m[k]&lt;&gt;50000000000) and (m2[k]=0) then
 ^~
000023.cpp:46:1: error: expected unqualified-id before 'if'
 if (m[k]=50000000000) or (m2[k]=0) then
 ^~
000023.cpp:50:1: error: 'end' does not name a type
 end.
 ^~~
</compiler_output>
</testing-report>
